--- a/app/src/main/res/layout/fragment_countdown.xml
+++ b/app/src/main/res/layout/fragment_countdown.xml
@@ -47,16 +47,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="@dimen/timer_dias"
-        app:type="normal" />
+        app:layout_constraintVertical_bias="@dimen/timer_dias" />
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/work_running"
-        android:visibility="invisible"
         android:layout_width="176dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/timer_horizontal_margin_half"
         android:orientation="vertical"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/timer">
