--- a/app/src/main/res/layout/fragment_countdown.xml
+++ b/app/src/main/res/layout/fragment_countdown.xml
@@ -143,7 +143,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:padding="12dp"
-            android:text="@string/pause"
+            android:text="@string/skip"
             android:textAllCaps="false"
             android:textColor="@color/relax_color"
             android:textSize="16sp"
