--- a/app/src/main/res/layout/fragment_finish.xml
+++ b/app/src/main/res/layout/fragment_finish.xml
@@ -81,7 +81,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="@dimen/timer_dias"
+        app:layout_constraintVertical_bias="0.4"
         app:type="normal"
         tools:ignore="HardcodedText" />
 
@@ -102,7 +102,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:padding="12dp"
-            android:text="@string/break_start"
+            android:text="@string/work_start"
             android:textAllCaps="false"
             android:textSize="16sp"
             app:cornerRadius="20dp"
