--- a/app/src/main/res/layout/fragment_countdown.xml
+++ b/app/src/main/res/layout/fragment_countdown.xml
@@ -129,7 +129,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:padding="12dp"
-            android:text="@string/start"
+            android:text="@string/skip"
             android:textAllCaps="false"
             android:textSize="16sp"
             app:backgroundTint="@color/relax_color"
@@ -143,7 +143,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:padding="12dp"
-            android:text="@string/skip"
+            android:text="@string/exit"
             android:textAllCaps="false"
             android:textColor="@color/relax_color"
             android:textSize="16sp"
