--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,7 +5,7 @@
         <item name="colorPrimary">@color/primaryLightColor</item>
         <item name="colorSecondary">@color/secondaryLightColor</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/primaryColor</item>
+        <item name="android:statusBarColor" >@color/primaryColor</item>
 
         <item name="preferenceTheme">@style/PrefsTheme</item>
     </style>
@@ -15,7 +15,7 @@
         <item name="colorPrimary">@color/primaryLightColor</item>
         <item name="colorSecondary">@color/secondaryLightColor</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/primaryColor</item>
+        <item name="android:statusBarColor" >@color/primaryColor</item>
         <item name="actionBarTheme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
 
         <item name="preferenceTheme">@style/PrefsTheme</item>
