--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,9 +11,7 @@
     </style>
 
     <style name="Theme.Hystime.Starting" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
-
-        <item name="windowSplashScreenBackground">@color/primaryColor</item>
+        <!-- TODO: Add theme's starting splash screen here. -->
         <item name="postSplashScreenTheme">@style/Theme.Hystime</item>
     </style>
 
