--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -133,17 +133,24 @@
                                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
 
                             <com.google.android.material.textview.MaterialTextView
-                                android:id="@+id/start"
+                                android:id="@+id/date"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginEnd="4dp"
+                                android:text="@string/default_date" />
+
+                            <com.google.android.material.textview.MaterialTextView
+                                android:id="@+id/start"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginEnd="2dp"
                                 android:text="@string/default_time" />
 
                             <View
                                 android:layout_width="20dp"
                                 android:layout_height="1dp"
                                 android:layout_gravity="center"
-                                android:layout_marginEnd="4dp"
+                                android:layout_marginEnd="2dp"
                                 android:background="@android:color/darker_gray" />
 
                             <com.google.android.material.textview.MaterialTextView
